# askyourmail

./: .gitattributes  .gitignore  README.MD  docker-compose.yml  eval_log.txt  eval_log_exhaustive_k_50.txt  eval_log_exhaustive_k_50_retrieval_k_36.txt  eval_log_only_combined_k_25_retrieval_k_160.txt  eval_log_only_combined_k_600.txt  eval_log_only_combined_k_600_retrieval_k_32.txt  example.env  project.env  pyproject.toml  requirements.txt
askyourmail/src/: evaluate.py  generateEvalDataset.py  main.py
askyourmail/src/agents/AnswerAgent/: AnswerAgent.py  AnswerAgentInput.py  AnswerAgentOutput.py
askyourmail/src/agents/AssistantAgent/: AssistantAgent.py  AssistantAgentInput.py  (+1 more)
askyourmail/src/data/: Conversation.py  Email.py  Emails.py  EvaluationPair.py  Filter.py  Processor.py
askyourmail/src/graphs/: EvaluationDatasetGeneratorGraph.py  MainGraph.py
askyourmail/src/util/: ChromaDriver.py  Constants.py  Evaluator.py  TimedateParser.py
chroma_db/: chroma.sqlite3
chroma_db/3acd1b57-221c-4f4f-a3b5-836944c70de1/: index_metadata.pickle
chroma_db/74f3842e-06a6-4077-8a13-501b40304953/: index_metadata.pickle
evaluation/: eval_gen_dataset_k_1.json  eval_gen_dataset_k_10.json  eval_gen_dataset_k_100.json  eval_gen_dataset_k_1000.json  eval_gen_dataset_k_25.json  eval_gen_dataset_k_50.json  eval_result_base_2024-12-12_02-13-43_k_50.pickle  eval_result_context_combined_2024-12-12_17-23-02_k_1.pickle  eval_result_context_date_2024-12-12_02-13-43_k_50.pickle  eval_result_context_from_2024-12-12_02-13-43_k_50.pickle
evaluation/checkpoints/: 300_of_690.pickle
(+20 files in other folders)
