[tool.poetry]
name = "askyourmail"
version = "0.1.0"
description = "askyourmail core repository"
authors = ["Julian Hans <julian.hans@student.uni-luebeck.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.45"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
python-dotenv = "^1.0.1"
langchain-chroma = "^0.1.4"
langchain = "^0.3.9"
openai = "^1.55.3"
pandas = "^2.2.3"
kagglehub = "^0.3.4"
gradio = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
